--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "blockly-src",
   "version": "1.0.0",
   "description": "Blockly is a library for building visual programming editors.",
-  "keywords": ["blockly"],
+  "keywords": [
+    "blockly"
+  ],
   "scripts": {
     "lint": "jshint ."
   },
@@ -20,11 +22,19 @@
   "license": "Apache-2.0",
   "private": true,
   "devDependencies": {
+    "electron": "1.7.10",
     "jshint": "latest"
   },
   "jshintConfig": {
     "globalstrict": true,
-    "predef": ["Blockly", "goog", "window", "document", "soy", "XMLHttpRequest"],
+    "predef": [
+      "Blockly",
+      "goog",
+      "window",
+      "document",
+      "soy",
+      "XMLHttpRequest"
+    ],
     "sub": true,
     "undef": true,
     "unused": true
